# gradio-chatbot-with-ollama

./: .env.example  .gitignore  README.md  create-desktop-shortcut.sh  docker-compose.dev.yml  docker-compose.prod.yml  main.py  ollama_chat.py  pyproject.toml  requirements.txt  run-full-windows.ps1  run-linux.sh  run-windows.bat  run-windows.ps1  setup-linux.sh  setup-windows.bat  setup-windows.ps1
src/: config.py  main.py
src/api/: app.py
src/api/routes/: cookies.py  health.py
src/chat/: streamer.py  utils.py
src/clients/: ollama.py
src/ui/: interface.py
src/utils/: logger.py
